--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "diagnostico-fallas",
+  "name": "casa-fallas",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,7 +14,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "gh-pages": "^5.0.0",
     "vite": "^5.0.0"
   }
 }
